feat: add additional statistics